# audd-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SECURITY.md  audd.pc.in  version.h
.github/workflows/: ci.yml
examples/: CMakeLists.txt  custom_catalog_add.c  recognize_enterprise.c  recognize_file.c  recognize_url.c  scan_and_rename.c  stream_to_csv.c  streams_callback_handler.c  streams_longpoll.c  streams_setup.c
include/: audd.h  audd_version.h
src/: audd_advanced.c  audd_alloc.c  audd_callback.c  audd_client.c  audd_custom_catalog.c  audd_enterprise.c  audd_error.c  audd_http.c  audd_internal.h  audd_json.c  audd_longpoll.c  audd_md5.c  audd_recognition.c  audd_streams.c  audd_url.c
tests/: CMakeLists.txt  test_callback_parsing.c  test_enterprise_parsing.c  test_error_mapping.c  test_extras.c  test_longpoll_category.c  test_recognition_parsing.c  test_retry_policy.c  test_url_helpers.c
